--- a/wp-content/themes/moveo/style.css
+++ b/wp-content/themes/moveo/style.css
@@ -393,6 +393,10 @@ a.more {
     text-transform: uppercase;
     color: #323232;
 }
+.contact-form textarea {
+    width: 100%;
+    height: 181px;
+}
 
 
 /* HOMEPAGE */
