FIX: les puces pour les liens en rouge des pages projets et presse s'affichaient à gauche de l'image de gauche

--- a/wp-content/themes/moveo/style.css
+++ b/wp-content/themes/moveo/style.css
@@ -387,6 +387,7 @@ a.more {
     background-position: left;
     background-image: url('img/fleche.png');
     padding-left: 20px;
+    overflow: hidden;
 }
 
 .ariane a {
