--- a/wp-content/themes/moveo/editor-style.css
+++ b/wp-content/themes/moveo/editor-style.css
@@ -71,6 +71,11 @@ Description: Used to style the TinyMCE editor.
      margin-left: 10px;
      font-size: 20px;
  }
+ h4 {
+     font-family: 'Champagne&LimousinesBold', Arial;
+     text-transform: uppercase;
+     font-size: 22px;
+ }
  a {
      color: #27a387;
      text-decoration: none;
